<?xml version="1.0"?>
<package format="3">
  <name>qrrt_planner</name>
  <version>0.0.0</version>
  <description>Joint-space qRRT experiments with MoveIt collision checking.</description>

  <maintainer email="jesse.beneventi@wsu.edu">Jesse</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
